// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PureEducation /> bails out on no data 1`] = `
<div
  data-testid="education"
>
  <div
    data-testid="sectionContainer"
  >
    <h2
      data-testid="sectionTitle"
    >
      Education
    </h2>
  </div>
</div>
`;

exports[`<PureEducation /> handles times where you don't have a 'type' (e.g. online courses) 1`] = `
<div
  data-testid="education"
>
  <div
    data-testid="sectionContainer"
  >
    <h2
      data-testid="sectionTitle"
    >
      Education
    </h2>
    <div
      data-testid="sectionItemContainer"
    >
      <h1
        data-testid="itemTitle"
      >
        Software Development
      </h1>
      <div
        data-testid="byline"
      >
        <span
          data-testid="itemSubtitle"
        >
          University
        </span>
        |
        <p
          data-testid="sectionItemDates"
        >
          2011
           - 
          2013
        </p>
      </div>
      <div
        data-testid="sectionItemDetails"
      >
        <ul>
          

          <li>
            DB1101 - Basic SQL
          </li>
          

        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PureEducation /> no course details? 1`] = `
<div
  data-testid="education"
>
  <div
    data-testid="sectionContainer"
  >
    <h2
      data-testid="sectionTitle"
    >
      Education
    </h2>
    <div
      data-testid="sectionItemContainer"
    >
      <h1
        data-testid="itemTitle"
      >
        Software Development
      </h1>
      <div
        data-testid="byline"
      >
        <span
          data-testid="itemSubtitle"
        >
          University
        </span>
        |
        <p
          data-testid="sectionItemDates"
        >
          2011
           - 
          2013
        </p>
      </div>
      <div
        data-testid="sectionItemDetails"
      >
        <ul>
          

          <li>
            Awesome Class
          </li>
          

          <li>
            Boring Unit
          </li>
          

          <li>
            Interesting Extracurricular
          </li>
          

        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PureEducation /> renders OK 1`] = `
<div
  data-testid="education"
>
  <div
    data-testid="sectionContainer"
  >
    <h2
      data-testid="sectionTitle"
    >
      Education
    </h2>
    <div
      data-testid="sectionItemContainer"
    >
      <h1
        data-testid="itemTitle"
      >
        Bachelor of Software Development
      </h1>
      <div
        data-testid="byline"
      >
        <span
          data-testid="itemSubtitle"
        >
          University
        </span>
        |
        <p
          data-testid="sectionItemDates"
        >
          2011
           - 
          2013
        </p>
      </div>
      <div
        data-testid="sectionItemDetails"
      >
        <ul>
          

          <li>
            DB1101 - Basic SQL
          </li>
          

        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PureEducation /> renders array of >=1 PureEducation items 1`] = `
<div
  data-testid="education"
>
  <div
    data-testid="sectionContainer"
  >
    <h2
      data-testid="sectionTitle"
    >
      Education
    </h2>
    <div
      data-testid="sectionItemContainer"
    >
      <h1
        data-testid="itemTitle"
      >
        Bachelor of Software Development
      </h1>
      <div
        data-testid="byline"
      >
        <span
          data-testid="itemSubtitle"
        >
          University
        </span>
        |
        <p
          data-testid="sectionItemDates"
        >
          2011
           - 
          2013
        </p>
      </div>
      <div
        data-testid="sectionItemDetails"
      >
        <ul>
          

          <li>
            DB1101 - Basic SQL
          </li>
          

        </ul>
      </div>
    </div>
  </div>
</div>
`;
